[gd_scene load_steps=19 format=4 uid="uid://ct5nw3i3nuv6l"]

[ext_resource type="Script" uid="uid://onc2fdweedn7" path="res://Dungeon/dungeon.gd" id="1_jqckn"]
[ext_resource type="PackedScene" uid="uid://bursypx5unela" path="res://Player/player.tscn" id="2_7wc3a"]
[ext_resource type="PackedScene" uid="uid://f75n6uvmavva" path="res://UI/princess_health_ui.tscn" id="2_uag5o"]
[ext_resource type="PackedScene" uid="uid://c1onywepqrykl" path="res://UI/player_health_ui.tscn" id="3_uag5o"]
[ext_resource type="Script" uid="uid://5shhc343p2a4" path="res://Dungeon/dungeon_camera_2d.gd" id="4_jqckn"]
[ext_resource type="PackedScene" uid="uid://cqv7hf2dkuljw" path="res://Dialogue/dialogue_room_manager.tscn" id="5_85cul"]
[ext_resource type="PackedScene" uid="uid://brme23g7yalcu" path="res://Dialogue/dialogue_barrier.tscn" id="5_av2vf"]
[ext_resource type="PackedScene" uid="uid://cbtcrvc8377r3" path="res://Dungeon/dungeon_room.tscn" id="5_v3ata"]
[ext_resource type="Resource" uid="uid://fqwltrnnpsc5" path="res://Dialogue/princessIntro.dialogue" id="6_77ujo"]
[ext_resource type="PackedScene" uid="uid://mvgpyyrkt607" path="res://Dungeon/spikes.tscn" id="6_uj8uw"]
[ext_resource type="PackedScene" uid="uid://cq0lkubnbnja4" path="res://Dungeon/door_button.tscn" id="7_av2vf"]
[ext_resource type="TileSet" uid="uid://mt4o7s2t6ie6" path="res://World/desert_bg.tres" id="7_uj8uw"]
[ext_resource type="Script" uid="uid://sh25djq0yt3j" path="res://World/tile_map_astar.gd" id="8_k21r5"]
[ext_resource type="PackedScene" uid="uid://6wkafegtbmeu" path="res://Enemies/spikeball.tscn" id="9_6gydx"]
[ext_resource type="PackedScene" uid="uid://ukvccod4ru5w" path="res://Dungeon/door.tscn" id="9_o2cd7"]
[ext_resource type="PackedScene" uid="uid://dka5wc1yusobs" path="res://Enemies/ghost.tscn" id="11_7wc3a"]
[ext_resource type="PackedScene" uid="uid://bixth4v8wdly8" path="res://NPCs/princess.tscn" id="16_77ujo"]
[ext_resource type="PackedScene" uid="uid://dy6pue4w71b2b" path="res://navigation_region_2d.tscn" id="24_tkvb4"]

[node name="Dungeon" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jqckn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealthUI" parent="CanvasLayer" instance=ExtResource("3_uag5o")]
z_index = 1

[node name="PrincessHealthUI" parent="CanvasLayer" instance=ExtResource("2_uag5o")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 8.0
script = ExtResource("4_jqckn")

[node name="DialogueRoomManager" parent="." instance=ExtResource("5_85cul")]
dialogueResource = ExtResource("6_77ujo")

[node name="DialogueBarrier" parent="." instance=ExtResource("5_av2vf")]
position = Vector2(160, 8)

[node name="DungeonRoom0" parent="." instance=ExtResource("5_v3ata")]
position = Vector2(320, 0)

[node name="Ghost0" parent="DungeonRoom0" instance=ExtResource("11_7wc3a")]
position = Vector2(64, 88)

[node name="Ghost1" parent="DungeonRoom0" instance=ExtResource("11_7wc3a")]
position = Vector2(64, 136)

[node name="Spikes0" parent="DungeonRoom0" instance=ExtResource("6_uj8uw")]
position = Vector2(0, 112)

[node name="DungeonRoom1" parent="." instance=ExtResource("5_v3ata")]

[node name="DungeonRoom2" parent="." instance=ExtResource("5_v3ata")]
position = Vector2(0, -240)

[node name="Ghost1" parent="DungeonRoom2" instance=ExtResource("11_7wc3a")]
position = Vector2(184, 88)

[node name="Ghost2" parent="DungeonRoom2" instance=ExtResource("11_7wc3a")]
position = Vector2(72, 144)

[node name="Ghost3" parent="DungeonRoom2" instance=ExtResource("11_7wc3a")]
position = Vector2(256, 144)

[node name="Ghost4" parent="DungeonRoom2" instance=ExtResource("11_7wc3a")]
position = Vector2(160, 144)

[node name="Spikeball" parent="DungeonRoom2" instance=ExtResource("9_6gydx")]
position = Vector2(264, 72)

[node name="Spikeball2" parent="DungeonRoom2" instance=ExtResource("9_6gydx")]
position = Vector2(88, 104)

[node name="Spikes1" parent="DungeonRoom2" instance=ExtResource("6_uj8uw")]
position = Vector2(160, 240)
rotation = -1.5708

[node name="Spikes2" parent="DungeonRoom2" instance=ExtResource("6_uj8uw")]
position = Vector2(160, 0)
rotation = 1.5708

[node name="DungeonRoom3" parent="." instance=ExtResource("5_v3ata")]
position = Vector2(0, -480)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_map_data = PackedByteArray("AAAAAAAAAQACAAoAAAAAAAEAAQACAAoAAAAAAAIAAQACAAoAAAAAAAMAAQACAAoAAAAAAAcAAQACAAoAAAAAAAgAAQACAAoAAAAAAAkAAQACAAoAAAAAAAoAAQACAAoAAAAAAAsAAQACAAoAAAAAAAwAAQACAAoAAAAAAA0AAQACAAoAAAAAAA4AAQACAAoAAAABAA4AAQACAAoAAAACAA4AAQACAAoAAAADAA4AAQACAAoAAAAEAA4AAQACAAoAAAAFAA4AAQACAAoAAAAGAA4AAQACAAoAAAAHAA4AAQACAAoAAAAIAA4AAQACAAoAAAAJAA4AAQACAAoAAAAKAA4AAQACAAoAAAALAA4AAQACAAoAAAAMAA4AAQACAAoAAAANAA4AAQACAAoAAAAOAA4AAQACAAoAAAAPAA4AAQACAAoAAAAQAA4AAQACAAoAAAARAA4AAQACAAoAAAASAA4AAQACAAoAAAATAA4AAQACAAoAAAATAAAAAQACAAoAAAATAAEAAQACAAoAAAATAAIAAQACAAoAAAATAAMAAQACAAoAAAATAAQAAQACAAoAAAATAAUAAQACAAoAAAATAAgAAQACAAoAAAATAAkAAQACAAoAAAATAAoAAQACAAoAAAATAAsAAQACAAoAAAATAAwAAQACAAoAAAATAA0AAQACAAoAAAALAAAAAQACAAoAAAAMAAAAAQACAAoAAAANAAAAAQACAAoAAAAOAAAAAQACAAoAAAAPAAAAAQACAAoAAAAQAAAAAQACAAoAAAARAAAAAQACAAoAAAASAAAAAQACAAoAAAABAAAAAQACAAoAAAACAAAAAQACAAoAAAADAAAAAQACAAoAAAAEAAAAAQACAAoAAAAFAAAAAQACAAoAAAAGAAAAAQACAAoAAAAHAAAAAQACAAoAAAAIAAAAAQACAAoAAAAUAAAAAQACAAoAAAAUAAEAAQACAAoAAAAUAAIAAQACAAoAAAAUAAMAAQACAAoAAAAUAAQAAQACAAoAAAAUAAUAAQACAAoAAAAUAAgAAQACAAoAAAAUAAkAAQACAAoAAAAUAAoAAQACAAoAAAAUAAsAAQACAAoAAAAUAAwAAQACAAoAAAAUAA0AAQACAAoAAAAUAA4AAQACAAoAAAAVAA4AAQACAAoAAAAWAA4AAQACAAoAAAAXAA4AAQACAAoAAAAYAA4AAQACAAoAAAAZAA4AAQACAAoAAAAaAA4AAQACAAoAAAAbAA4AAQACAAoAAAAcAA4AAQACAAoAAAAdAA4AAQACAAoAAAAeAA4AAQACAAoAAAAfAA4AAQACAAoAAAAgAA4AAQACAAoAAAAhAA4AAQACAAoAAAAiAA4AAQACAAoAAAAjAA4AAQACAAoAAAAkAA4AAQACAAoAAAAlAA4AAQACAAoAAAAmAA4AAQACAAoAAAAnAA4AAQACAAoAAAAVAAAAAQACAAoAAAAWAAAAAQACAAoAAAAXAAAAAQACAAoAAAAYAAAAAQACAAoAAAAZAAAAAQACAAoAAAAaAAAAAQACAAoAAAAbAAAAAQACAAoAAAAcAAAAAQACAAoAAAAdAAAAAQACAAoAAAAeAAAAAQACAAoAAAAfAAAAAQACAAoAAAAgAAAAAQACAAoAAAAhAAAAAQACAAoAAAAiAAAAAQACAAoAAAAjAAAAAQACAAoAAAAkAAAAAQACAAoAAAAlAAAAAQACAAoAAAAmAAAAAQACAAoAAAAnAAAAAQACAAoAAAAnAAEAAQACAAoAAAAnAAIAAQACAAoAAAAnAAMAAQACAAoAAAAnAAQAAQACAAoAAAAnAAUAAQACAAoAAAAnAAYAAQACAAoAAAAnAAcAAQACAAoAAAAnAAgAAQACAAoAAAAnAAkAAQACAAoAAAAnAAoAAQACAAoAAAAnAAsAAQACAAoAAAAnAAwAAQACAAoAAAAnAA0AAQACAAoAAAAAAAQAAQACAAoAAAAAAAUAAQACAAoAAAAAAAYAAQACAAoAAAAAAP//AQACAAoAAAABAP//AQACAAoAAAACAP//AQACAAoAAAADAP//AQACAAoAAAAEAP//AQACAAoAAAAFAP//AQACAAoAAAAGAP//AQACAAoAAAAHAP//AQACAAoAAAAIAP//AQACAAoAAAALAP//AQACAAoAAAAMAP//AQACAAoAAAANAP//AQACAAoAAAAOAP//AQACAAoAAAAPAP//AQACAAoAAAAQAP//AQACAAoAAAARAP//AQACAAoAAAASAP//AQACAAoAAAATAP//AQACAAoAAAATAPH/AQACAAoAAAATAPL/AQACAAoAAAATAPP/AQACAAoAAAATAPT/AQACAAoAAAATAPX/AQACAAoAAAATAPb/AQACAAoAAAATAPf/AQACAAoAAAATAPj/AQACAAoAAAATAPn/AQACAAoAAAATAPr/AQACAAoAAAATAPv/AQACAAoAAAATAPz/AQACAAoAAAATAP3/AQACAAoAAAATAP7/AQACAAoAAAALAPH/AQACAAoAAAAMAPH/AQACAAoAAAANAPH/AQACAAoAAAAOAPH/AQACAAoAAAAPAPH/AQACAAoAAAAQAPH/AQACAAoAAAARAPH/AQACAAoAAAASAPH/AQACAAoAAAAAAPH/AQACAAoAAAABAPH/AQACAAoAAAACAPH/AQACAAoAAAADAPH/AQACAAoAAAAEAPH/AQACAAoAAAAFAPH/AQACAAoAAAAGAPH/AQACAAoAAAAHAPH/AQACAAoAAAAIAPH/AQACAAoAAAAAAPL/AQACAAoAAAAAAPP/AQACAAoAAAAAAPT/AQACAAoAAAAAAPX/AQACAAoAAAAAAPb/AQACAAoAAAAAAPf/AQACAAoAAAAAAPj/AQACAAoAAAAAAPn/AQACAAoAAAAAAPr/AQACAAoAAAAAAPv/AQACAAoAAAAAAPz/AQACAAoAAAAAAP3/AQACAAoAAAAAAP7/AQACAAoAAAAAAPD/AQACAAoAAAABAPD/AQACAAoAAAACAPD/AQACAAoAAAADAPD/AQACAAoAAAAEAPD/AQACAAoAAAAFAPD/AQACAAoAAAAGAPD/AQACAAoAAAAHAPD/AQACAAoAAAAIAPD/AQACAAoAAAALAPD/AQACAAoAAAAMAPD/AQACAAoAAAANAPD/AQACAAoAAAAOAPD/AQACAAoAAAAPAPD/AQACAAoAAAAQAPD/AQACAAoAAAARAPD/AQACAAoAAAASAPD/AQACAAoAAAATAPD/AQACAAoAAAAAAOT/AQACAAoAAAAAAOX/AQACAAoAAAAAAOb/AQACAAoAAAAAAOf/AQACAAoAAAAAAOj/AQACAAoAAAAAAOn/AQACAAoAAAAAAOr/AQACAAoAAAAAAOv/AQACAAoAAAAAAOz/AQACAAoAAAAAAO3/AQACAAoAAAAAAO7/AQACAAoAAAAAAO//AQACAAoAAAATAOT/AQACAAoAAAATAOX/AQACAAoAAAATAOb/AQACAAoAAAATAOf/AQACAAoAAAATAOj/AQACAAoAAAATAOn/AQACAAoAAAATAOr/AQACAAoAAAATAOv/AQACAAoAAAATAOz/AQACAAoAAAATAO3/AQACAAoAAAATAO7/AQACAAoAAAATAO//AQACAAoAAAABAAEAAQADAAQAAAABAAIAAQADAAQAAAABAAMAAQADAAQAAAABAAQAAQADAAQAAAABAAUAAQADAAQAAAABAAYAAQADAAQAAAABAAcAAQADAAQAAAABAAgAAQADAAQAAAABAAkAAQADAAQAAAABAAoAAQADAAQAAAABAAsAAQADAAQAAAABAAwAAQADAAQAAAABAA0AAQADAAQAAAACAAEAAQADAAQAAAACAAIAAQADAAQAAAACAAMAAQADAAQAAAACAAQAAQADAAQAAAACAAUAAQADAAQAAAACAAYAAQADAAQAAAACAAcAAQADAAQAAAACAAgAAQADAAQAAAACAAkAAQADAAQAAAACAAoAAQADAAQAAAACAAsAAQADAAQAAAACAAwAAQADAAQAAAACAA0AAQADAAQAAAADAAEAAQADAAQAAAADAAIAAQADAAQAAAADAAMAAQADAAQAAAADAAQAAQADAAQAAAADAAUAAQADAAQAAAADAAYAAQADAAQAAAADAAcAAQADAAQAAAADAAgAAQADAAQAAAADAAkAAQADAAQAAAADAAoAAQADAAQAAAADAAsAAQADAAQAAAADAAwAAQADAAQAAAADAA0AAQADAAQAAAAEAAEAAQADAAQAAAAEAAIAAQADAAQAAAAEAAMAAQADAAQAAAAEAAQAAQADAAQAAAAEAAUAAQADAAQAAAAEAAYAAQADAAQAAAAEAAcAAQADAAQAAAAEAAgAAQADAAQAAAAEAAkAAQADAAQAAAAEAAoAAQADAAQAAAAEAAsAAQADAAQAAAAEAAwAAQADAAQAAAAEAA0AAQADAAQAAAAFAAEAAQADAAQAAAAFAAIAAQADAAQAAAAFAAMAAQADAAQAAAAFAAQAAQADAAQAAAAFAAUAAQADAAQAAAAFAAYAAQADAAQAAAAFAAcAAQADAAQAAAAFAAgAAQADAAQAAAAFAAkAAQADAAQAAAAFAAoAAQADAAQAAAAFAAsAAQADAAQAAAAFAAwAAQADAAQAAAAFAA0AAQADAAQAAAAGAAEAAQADAAQAAAAGAAIAAQADAAQAAAAGAAMAAQADAAQAAAAGAAQAAQADAAQAAAAGAAUAAQADAAQAAAAGAAYAAQADAAQAAAAGAAcAAQADAAQAAAAGAAgAAQADAAQAAAAGAAkAAQADAAQAAAAGAAoAAQADAAQAAAAGAAsAAQADAAQAAAAGAAwAAQADAAQAAAAGAA0AAQADAAQAAAAHAAEAAQADAAQAAAAHAAIAAQADAAQAAAAHAAMAAQADAAQAAAAHAAQAAQADAAQAAAAHAAUAAQADAAQAAAAHAAYAAQADAAQAAAAHAAcAAQADAAQAAAAHAAgAAQADAAQAAAAHAAkAAQADAAQAAAAHAAoAAQADAAQAAAAHAAsAAQADAAQAAAAHAAwAAQADAAQAAAAHAA0AAQADAAQAAAAIAAEAAQADAAQAAAAIAAIAAQADAAQAAAAIAAMAAQADAAQAAAAIAAQAAQADAAQAAAAIAAUAAQADAAQAAAAIAAYAAQADAAQAAAAIAAcAAQADAAQAAAAIAAgAAQADAAQAAAAIAAkAAQADAAQAAAAIAAoAAQADAAQAAAAIAAsAAQADAAQAAAAIAAwAAQADAAQAAAAIAA0AAQADAAQAAAAJAAEAAQADAAQAAAAJAAIAAQADAAQAAAAJAAMAAQADAAQAAAAJAAQAAQADAAQAAAAJAAUAAQADAAQAAAAJAAYAAQADAAQAAAAJAAcAAQADAAQAAAAJAAgAAQADAAQAAAAJAAkAAQADAAQAAAAJAAoAAQADAAQAAAAJAAsAAQADAAQAAAAJAAwAAQADAAQAAAAJAA0AAQADAAQAAAAKAAEAAQADAAQAAAAKAAIAAQADAAQAAAAKAAMAAQADAAQAAAAKAAQAAQADAAQAAAAKAAUAAQADAAQAAAAKAAYAAQADAAQAAAAKAAcAAQADAAQAAAAKAAgAAQADAAQAAAAKAAkAAQADAAQAAAAKAAoAAQADAAQAAAAKAAsAAQADAAQAAAAKAAwAAQADAAQAAAAKAA0AAQADAAQAAAALAAEAAQADAAQAAAALAAIAAQADAAQAAAALAAMAAQADAAQAAAALAAQAAQADAAQAAAALAAUAAQADAAQAAAALAAYAAQADAAQAAAALAAcAAQADAAQAAAALAAgAAQADAAQAAAALAAkAAQADAAQAAAALAAoAAQADAAQAAAALAAsAAQADAAQAAAALAAwAAQADAAQAAAALAA0AAQADAAQAAAAMAAEAAQADAAQAAAAMAAIAAQADAAQAAAAMAAMAAQADAAQAAAAMAAQAAQADAAQAAAAMAAUAAQADAAQAAAAMAAYAAQADAAQAAAAMAAcAAQADAAQAAAAMAAgAAQADAAQAAAAMAAkAAQADAAQAAAAMAAoAAQADAAQAAAAMAAsAAQADAAQAAAAMAAwAAQADAAQAAAAMAA0AAQADAAQAAAANAAEAAQADAAQAAAANAAIAAQADAAQAAAANAAMAAQADAAQAAAANAAQAAQADAAQAAAANAAUAAQADAAQAAAANAAYAAQADAAQAAAANAAcAAQADAAQAAAANAAgAAQADAAQAAAANAAkAAQADAAQAAAANAAoAAQADAAQAAAANAAsAAQADAAQAAAANAAwAAQADAAQAAAANAA0AAQADAAQAAAAOAAEAAQADAAQAAAAOAAIAAQADAAQAAAAOAAMAAQADAAQAAAAOAAQAAQADAAQAAAAOAAUAAQADAAQAAAAOAAYAAQADAAQAAAAOAAcAAQADAAQAAAAOAAgAAQADAAQAAAAOAAkAAQADAAQAAAAOAAoAAQADAAQAAAAOAAsAAQADAAQAAAAOAAwAAQADAAQAAAAOAA0AAQADAAQAAAAPAAEAAQADAAQAAAAPAAIAAQADAAQAAAAPAAMAAQADAAQAAAAPAAQAAQADAAQAAAAPAAUAAQADAAQAAAAPAAYAAQADAAQAAAAPAAcAAQADAAQAAAAPAAgAAQADAAQAAAAPAAkAAQADAAQAAAAPAAoAAQADAAQAAAAPAAsAAQADAAQAAAAPAAwAAQADAAQAAAAPAA0AAQADAAQAAAAQAAEAAQADAAQAAAAQAAIAAQADAAQAAAAQAAMAAQADAAQAAAAQAAQAAQADAAQAAAAQAAUAAQADAAQAAAAQAAYAAQADAAQAAAAQAAcAAQADAAQAAAAQAAgAAQADAAQAAAAQAAkAAQADAAQAAAAQAAoAAQADAAQAAAAQAAsAAQADAAQAAAAQAAwAAQADAAQAAAAQAA0AAQADAAQAAAARAAEAAQADAAQAAAARAAIAAQADAAQAAAARAAMAAQADAAQAAAARAAQAAQADAAQAAAARAAUAAQADAAQAAAARAAYAAQADAAQAAAARAAcAAQADAAQAAAARAAgAAQADAAQAAAARAAkAAQADAAQAAAARAAoAAQADAAQAAAARAAsAAQADAAQAAAARAAwAAQADAAQAAAARAA0AAQADAAQAAAASAAEAAQADAAQAAAASAAIAAQADAAQAAAASAAMAAQADAAQAAAASAAQAAQADAAQAAAASAAUAAQADAAQAAAASAAYAAQADAAQAAAASAAcAAQADAAQAAAASAAgAAQADAAQAAAASAAkAAQADAAQAAAASAAoAAQADAAQAAAASAAsAAQADAAQAAAASAAwAAQADAAQAAAASAA0AAQADAAQAAAAVAAEAAQADAAQAAAAVAAIAAQADAAQAAAAVAAMAAQADAAQAAAAVAAQAAQADAAQAAAAVAAUAAQADAAQAAAAVAAYAAQADAAQAAAAVAAcAAQADAAQAAAAVAAgAAQADAAQAAAAVAAkAAQADAAQAAAAVAAoAAQADAAQAAAAVAAsAAQADAAQAAAAVAAwAAQADAAQAAAAVAA0AAQADAAQAAAAWAAEAAQADAAQAAAAWAAIAAQADAAQAAAAWAAMAAQADAAQAAAAWAAQAAQADAAQAAAAWAAUAAQADAAQAAAAWAAYAAQADAAQAAAAWAAcAAQADAAQAAAAWAAgAAQADAAQAAAAWAAkAAQADAAQAAAAWAAoAAQADAAQAAAAWAAsAAQADAAQAAAAWAAwAAQADAAQAAAAWAA0AAQADAAQAAAAXAAEAAQADAAQAAAAXAAIAAQADAAQAAAAXAAMAAQADAAQAAAAXAAQAAQADAAQAAAAXAAUAAQADAAQAAAAXAAYAAQADAAQAAAAXAAcAAQADAAQAAAAXAAgAAQADAAQAAAAXAAkAAQADAAQAAAAXAAoAAQADAAQAAAAXAAsAAQADAAQAAAAXAAwAAQADAAQAAAAXAA0AAQADAAQAAAAYAAEAAQADAAQAAAAYAAIAAQADAAQAAAAYAAMAAQADAAQAAAAYAAQAAQADAAQAAAAYAAUAAQADAAQAAAAYAAYAAQADAAQAAAAYAAcAAQADAAQAAAAYAAgAAQADAAQAAAAYAAkAAQADAAQAAAAYAAoAAQADAAQAAAAYAAsAAQADAAQAAAAYAAwAAQADAAQAAAAYAA0AAQADAAQAAAAZAAEAAQADAAQAAAAZAAIAAQADAAQAAAAZAAMAAQADAAQAAAAZAAQAAQADAAQAAAAZAAUAAQADAAQAAAAZAAYAAQADAAQAAAAZAAcAAQADAAQAAAAZAAgAAQADAAQAAAAZAAkAAQADAAQAAAAZAAoAAQADAAQAAAAZAAsAAQADAAQAAAAZAAwAAQADAAQAAAAZAA0AAQADAAQAAAAaAAEAAQADAAQAAAAaAAIAAQADAAQAAAAaAAMAAQADAAQAAAAaAAQAAQADAAQAAAAaAAUAAQADAAQAAAAaAAYAAQADAAQAAAAaAAcAAQADAAQAAAAaAAgAAQADAAQAAAAaAAkAAQADAAQAAAAaAAoAAQADAAQAAAAaAAsAAQADAAQAAAAaAAwAAQADAAQAAAAaAA0AAQADAAQAAAAbAAEAAQADAAQAAAAbAAIAAQADAAQAAAAbAAMAAQADAAQAAAAbAAQAAQADAAQAAAAbAAUAAQADAAQAAAAbAAYAAQADAAQAAAAbAAcAAQADAAQAAAAbAAgAAQADAAQAAAAbAAkAAQADAAQAAAAbAAoAAQADAAQAAAAbAAsAAQADAAQAAAAbAAwAAQADAAQAAAAbAA0AAQADAAQAAAAcAAEAAQADAAQAAAAcAAIAAQADAAQAAAAcAAMAAQADAAQAAAAcAAQAAQADAAQAAAAcAAUAAQADAAQAAAAcAAYAAQADAAQAAAAcAAcAAQADAAQAAAAcAAgAAQADAAQAAAAcAAkAAQADAAQAAAAcAAoAAQADAAQAAAAcAAsAAQADAAQAAAAcAAwAAQADAAQAAAAcAA0AAQADAAQAAAAdAAEAAQADAAQAAAAdAAIAAQADAAQAAAAdAAMAAQADAAQAAAAdAAQAAQADAAQAAAAdAAUAAQADAAQAAAAdAAYAAQADAAQAAAAdAAcAAQADAAQAAAAdAAgAAQADAAQAAAAdAAkAAQADAAQAAAAdAAoAAQADAAQAAAAdAAsAAQADAAQAAAAdAAwAAQADAAQAAAAdAA0AAQADAAQAAAAeAAEAAQADAAQAAAAeAAIAAQADAAQAAAAeAAMAAQADAAQAAAAeAAQAAQADAAQAAAAeAAUAAQADAAQAAAAeAAYAAQADAAQAAAAeAAcAAQADAAQAAAAeAAgAAQADAAQAAAAeAAkAAQADAAQAAAAeAAoAAQADAAQAAAAeAAsAAQADAAQAAAAeAAwAAQADAAQAAAAeAA0AAQADAAQAAAAfAAEAAQADAAQAAAAfAAIAAQADAAQAAAAfAAMAAQADAAQAAAAfAAQAAQADAAQAAAAfAAUAAQADAAQAAAAfAAYAAQADAAQAAAAfAAcAAQADAAQAAAAfAAgAAQADAAQAAAAfAAkAAQADAAQAAAAfAAoAAQADAAQAAAAfAAsAAQADAAQAAAAfAAwAAQADAAQAAAAfAA0AAQADAAQAAAAgAAEAAQADAAQAAAAgAAIAAQADAAQAAAAgAAMAAQADAAQAAAAgAAQAAQADAAQAAAAgAAUAAQADAAQAAAAgAAYAAQADAAQAAAAgAAcAAQADAAQAAAAgAAgAAQADAAQAAAAgAAkAAQADAAQAAAAgAAoAAQADAAQAAAAgAAsAAQADAAQAAAAgAAwAAQADAAQAAAAgAA0AAQADAAQAAAAhAAEAAQADAAQAAAAhAAIAAQADAAQAAAAhAAMAAQADAAQAAAAhAAQAAQADAAQAAAAhAAUAAQADAAQAAAAhAAYAAQADAAQAAAAhAAcAAQADAAQAAAAhAAgAAQADAAQAAAAhAAkAAQADAAQAAAAhAAoAAQADAAQAAAAhAAsAAQADAAQAAAAhAAwAAQADAAQAAAAhAA0AAQADAAQAAAAiAAEAAQADAAQAAAAiAAIAAQADAAQAAAAiAAMAAQADAAQAAAAiAAQAAQADAAQAAAAiAAUAAQADAAQAAAAiAAYAAQADAAQAAAAiAAcAAQADAAQAAAAiAAgAAQADAAQAAAAiAAkAAQADAAQAAAAiAAoAAQADAAQAAAAiAAsAAQADAAQAAAAiAAwAAQADAAQAAAAiAA0AAQADAAQAAAAjAAEAAQADAAQAAAAjAAIAAQADAAQAAAAjAAMAAQADAAQAAAAjAAQAAQADAAQAAAAjAAUAAQADAAQAAAAjAAYAAQADAAQAAAAjAAcAAQADAAQAAAAjAAgAAQADAAQAAAAjAAkAAQADAAQAAAAjAAoAAQADAAQAAAAjAAsAAQADAAQAAAAjAAwAAQADAAQAAAAjAA0AAQADAAQAAAAkAAEAAQADAAQAAAAkAAIAAQADAAQAAAAkAAMAAQADAAQAAAAkAAQAAQADAAQAAAAkAAUAAQADAAQAAAAkAAYAAQADAAQAAAAkAAcAAQADAAQAAAAkAAgAAQADAAQAAAAkAAkAAQADAAQAAAAkAAoAAQADAAQAAAAkAAsAAQADAAQAAAAkAAwAAQADAAQAAAAkAA0AAQADAAQAAAAlAAEAAQADAAQAAAAlAAIAAQADAAQAAAAlAAMAAQADAAQAAAAlAAQAAQADAAQAAAAlAAUAAQADAAQAAAAlAAYAAQADAAQAAAAlAAcAAQADAAQAAAAlAAgAAQADAAQAAAAlAAkAAQADAAQAAAAlAAoAAQADAAQAAAAlAAsAAQADAAQAAAAlAAwAAQADAAQAAAAlAA0AAQADAAQAAAAmAAEAAQADAAQAAAAmAAIAAQADAAQAAAAmAAMAAQADAAQAAAAmAAQAAQADAAQAAAAmAAUAAQADAAQAAAAmAAYAAQADAAQAAAAmAAcAAQADAAQAAAAmAAgAAQADAAQAAAAmAAkAAQADAAQAAAAmAAoAAQADAAQAAAAmAAsAAQADAAQAAAAmAAwAAQADAAQAAAAmAA0AAQADAAQAAAABAPL/AQADAAQAAAABAPP/AQADAAQAAAABAPT/AQADAAQAAAABAPX/AQADAAQAAAABAPb/AQADAAQAAAABAPf/AQADAAQAAAABAPj/AQADAAQAAAABAPn/AQADAAQAAAABAPr/AQADAAQAAAABAPv/AQADAAQAAAABAPz/AQADAAQAAAABAP3/AQADAAQAAAABAP7/AQADAAQAAAACAPL/AQADAAQAAAACAPP/AQADAAQAAAACAPT/AQADAAQAAAACAPX/AQADAAQAAAACAPb/AQADAAQAAAACAPf/AQADAAQAAAACAPj/AQADAAQAAAACAPn/AQADAAQAAAACAPr/AQADAAQAAAACAPv/AQADAAQAAAACAPz/AQADAAQAAAACAP3/AQADAAQAAAACAP7/AQADAAQAAAADAPL/AQADAAQAAAADAPP/AQADAAQAAAADAPT/AQADAAQAAAADAPX/AQADAAQAAAADAPb/AQADAAQAAAADAPf/AQADAAQAAAADAPj/AQADAAQAAAADAPn/AQADAAQAAAADAPr/AQADAAQAAAADAPv/AQADAAQAAAADAPz/AQADAAQAAAADAP3/AQADAAQAAAADAP7/AQADAAQAAAAEAPL/AQADAAQAAAAEAPP/AQADAAQAAAAEAPT/AQADAAQAAAAEAPX/AQADAAQAAAAEAPb/AQADAAQAAAAEAPf/AQADAAQAAAAEAPj/AQADAAQAAAAEAPn/AQADAAQAAAAEAPr/AQADAAQAAAAEAPv/AQADAAQAAAAEAPz/AQADAAQAAAAEAP3/AQADAAQAAAAEAP7/AQADAAQAAAAFAPL/AQADAAQAAAAFAPP/AQADAAQAAAAFAPT/AQADAAQAAAAFAPX/AQADAAQAAAAFAPb/AQADAAQAAAAFAPf/AQADAAQAAAAFAPj/AQADAAQAAAAFAPn/AQADAAQAAAAFAPr/AQADAAQAAAAFAPv/AQADAAQAAAAFAPz/AQADAAQAAAAFAP3/AQADAAQAAAAFAP7/AQADAAQAAAAGAPL/AQADAAQAAAAGAPP/AQADAAQAAAAGAPT/AQADAAQAAAAGAPX/AQADAAQAAAAGAPb/AQADAAQAAAAGAPf/AQADAAQAAAAGAPj/AQADAAQAAAAGAPn/AQADAAQAAAAGAPr/AQADAAQAAAAGAPv/AQADAAQAAAAGAPz/AQADAAQAAAAGAP3/AQADAAQAAAAGAP7/AQADAAQAAAAHAPL/AQADAAQAAAAHAPP/AQADAAQAAAAHAPT/AQADAAQAAAAHAPX/AQADAAQAAAAHAPb/AQADAAQAAAAHAPf/AQADAAQAAAAHAPj/AQADAAQAAAAHAPn/AQADAAQAAAAHAPr/AQADAAQAAAAHAPv/AQADAAQAAAAHAPz/AQADAAQAAAAHAP3/AQADAAQAAAAHAP7/AQADAAQAAAAIAPL/AQADAAQAAAAIAPP/AQADAAQAAAAIAPT/AQADAAQAAAAIAPX/AQADAAQAAAAIAPb/AQADAAQAAAAIAPf/AQADAAQAAAAIAPj/AQADAAQAAAAIAPn/AQADAAQAAAAIAPr/AQADAAQAAAAIAPv/AQADAAQAAAAIAPz/AQADAAQAAAAIAP3/AQADAAQAAAAIAP7/AQADAAQAAAAJAPL/AQADAAQAAAAJAPP/AQADAAQAAAAJAPT/AQADAAQAAAAJAPX/AQADAAQAAAAJAPb/AQADAAQAAAAJAPf/AQADAAQAAAAJAPj/AQADAAQAAAAJAPn/AQADAAQAAAAJAPr/AQADAAQAAAAJAPv/AQADAAQAAAAJAPz/AQADAAQAAAAJAP3/AQADAAQAAAAJAP7/AQADAAQAAAAKAPL/AQADAAQAAAAKAPP/AQADAAQAAAAKAPT/AQADAAQAAAAKAPX/AQADAAQAAAAKAPb/AQADAAQAAAAKAPf/AQADAAQAAAAKAPj/AQADAAQAAAAKAPn/AQADAAQAAAAKAPr/AQADAAQAAAAKAPv/AQADAAQAAAAKAPz/AQADAAQAAAAKAP3/AQADAAQAAAAKAP7/AQADAAQAAAALAPL/AQADAAQAAAALAPP/AQADAAQAAAALAPT/AQADAAQAAAALAPX/AQADAAQAAAALAPb/AQADAAQAAAALAPf/AQADAAQAAAALAPj/AQADAAQAAAALAPn/AQADAAQAAAALAPr/AQADAAQAAAALAPv/AQADAAQAAAALAPz/AQADAAQAAAALAP3/AQADAAQAAAALAP7/AQADAAQAAAAMAPL/AQADAAQAAAAMAPP/AQADAAQAAAAMAPT/AQADAAQAAAAMAPX/AQADAAQAAAAMAPb/AQADAAQAAAAMAPf/AQADAAQAAAAMAPj/AQADAAQAAAAMAPn/AQADAAQAAAAMAPr/AQADAAQAAAAMAPv/AQADAAQAAAAMAPz/AQADAAQAAAAMAP3/AQADAAQAAAAMAP7/AQADAAQAAAANAPL/AQADAAQAAAANAPP/AQADAAQAAAANAPT/AQADAAQAAAANAPX/AQADAAQAAAANAPb/AQADAAQAAAANAPf/AQADAAQAAAANAPj/AQADAAQAAAANAPn/AQADAAQAAAANAPr/AQADAAQAAAANAPv/AQADAAQAAAANAPz/AQADAAQAAAANAP3/AQADAAQAAAANAP7/AQADAAQAAAAOAPL/AQADAAQAAAAOAPP/AQADAAQAAAAOAPT/AQADAAQAAAAOAPX/AQADAAQAAAAOAPb/AQADAAQAAAAOAPf/AQADAAQAAAAOAPj/AQADAAQAAAAOAPn/AQADAAQAAAAOAPr/AQADAAQAAAAOAPv/AQADAAQAAAAOAPz/AQADAAQAAAAOAP3/AQADAAQAAAAOAP7/AQADAAQAAAAPAPL/AQADAAQAAAAPAPP/AQADAAQAAAAPAPT/AQADAAQAAAAPAPX/AQADAAQAAAAPAPb/AQADAAQAAAAPAPf/AQADAAQAAAAPAPj/AQADAAQAAAAPAPn/AQADAAQAAAAPAPr/AQADAAQAAAAPAPv/AQADAAQAAAAPAPz/AQADAAQAAAAPAP3/AQADAAQAAAAPAP7/AQADAAQAAAAQAPL/AQADAAQAAAAQAPP/AQADAAQAAAAQAPT/AQADAAQAAAAQAPX/AQADAAQAAAAQAPb/AQADAAQAAAAQAPf/AQADAAQAAAAQAPj/AQADAAQAAAAQAPn/AQADAAQAAAAQAPr/AQADAAQAAAAQAPv/AQADAAQAAAAQAPz/AQADAAQAAAAQAP3/AQADAAQAAAAQAP7/AQADAAQAAAARAPL/AQADAAQAAAARAPP/AQADAAQAAAARAPT/AQADAAQAAAARAPX/AQADAAQAAAARAPb/AQADAAQAAAARAPf/AQADAAQAAAARAPj/AQADAAQAAAARAPn/AQADAAQAAAARAPr/AQADAAQAAAARAPv/AQADAAQAAAARAPz/AQADAAQAAAARAP3/AQADAAQAAAARAP7/AQADAAQAAAASAPL/AQADAAQAAAASAPP/AQADAAQAAAASAPT/AQADAAQAAAASAPX/AQADAAQAAAASAPb/AQADAAQAAAASAPf/AQADAAQAAAASAPj/AQADAAQAAAASAPn/AQADAAQAAAASAPr/AQADAAQAAAASAPv/AQADAAQAAAASAPz/AQADAAQAAAASAP3/AQADAAQAAAASAP7/AQADAAQAAAABAOT/AQADAAQAAAABAOX/AQADAAQAAAABAOb/AQADAAQAAAABAOf/AQADAAQAAAABAOj/AQADAAQAAAABAOn/AQADAAQAAAABAOr/AQADAAQAAAABAOv/AQADAAQAAAABAOz/AQADAAQAAAABAO3/AQADAAQAAAABAO7/AQADAAQAAAABAO//AQADAAQAAAACAOT/AQADAAQAAAACAOX/AQADAAQAAAACAOb/AQADAAQAAAACAOf/AQADAAQAAAACAOj/AQADAAQAAAACAOn/AQADAAQAAAACAOr/AQADAAQAAAACAOv/AQADAAQAAAACAOz/AQADAAQAAAACAO3/AQADAAQAAAACAO7/AQADAAQAAAACAO//AQADAAQAAAADAOT/AQADAAQAAAADAOX/AQADAAQAAAADAOb/AQADAAQAAAADAOf/AQADAAQAAAADAOj/AQADAAQAAAADAOn/AQADAAQAAAADAOr/AQADAAQAAAADAOv/AQADAAQAAAADAOz/AQADAAQAAAADAO3/AQADAAQAAAADAO7/AQADAAQAAAADAO//AQADAAQAAAAEAOT/AQADAAQAAAAEAOX/AQADAAQAAAAEAOb/AQADAAQAAAAEAOf/AQADAAQAAAAEAOj/AQADAAQAAAAEAOn/AQADAAQAAAAEAOr/AQADAAQAAAAEAOv/AQADAAQAAAAEAOz/AQADAAQAAAAEAO3/AQADAAQAAAAEAO7/AQADAAQAAAAEAO//AQADAAQAAAAFAOT/AQADAAQAAAAFAOX/AQADAAQAAAAFAOb/AQADAAQAAAAFAOf/AQADAAQAAAAFAOj/AQADAAQAAAAFAOn/AQADAAQAAAAFAOr/AQADAAQAAAAFAOv/AQADAAQAAAAFAOz/AQADAAQAAAAFAO3/AQADAAQAAAAFAO7/AQADAAQAAAAFAO//AQADAAQAAAAGAOT/AQADAAQAAAAGAOX/AQADAAQAAAAGAOb/AQADAAQAAAAGAOf/AQADAAQAAAAGAOj/AQADAAQAAAAGAOn/AQADAAQAAAAGAOr/AQADAAQAAAAGAOv/AQADAAQAAAAGAOz/AQADAAQAAAAGAO3/AQADAAQAAAAGAO7/AQADAAQAAAAGAO//AQADAAQAAAAHAOT/AQADAAQAAAAHAOX/AQADAAQAAAAHAOb/AQADAAQAAAAHAOf/AQADAAQAAAAHAOj/AQADAAQAAAAHAOn/AQADAAQAAAAHAOr/AQADAAQAAAAHAOv/AQADAAQAAAAHAOz/AQADAAQAAAAHAO3/AQADAAQAAAAHAO7/AQADAAQAAAAHAO//AQADAAQAAAAIAOT/AQADAAQAAAAIAOX/AQADAAQAAAAIAOb/AQADAAQAAAAIAOf/AQADAAQAAAAIAOj/AQADAAQAAAAIAOn/AQADAAQAAAAIAOr/AQADAAQAAAAIAOv/AQADAAQAAAAIAOz/AQADAAQAAAAIAO3/AQADAAQAAAAIAO7/AQADAAQAAAAIAO//AQADAAQAAAAJAOT/AQADAAQAAAAJAOX/AQADAAQAAAAJAOb/AQADAAQAAAAJAOf/AQADAAQAAAAJAOj/AQADAAQAAAAJAOn/AQADAAQAAAAJAOr/AQADAAQAAAAJAOv/AQADAAQAAAAJAOz/AQADAAQAAAAJAO3/AQADAAQAAAAJAO7/AQADAAQAAAAJAO//AQADAAQAAAAKAOT/AQADAAQAAAAKAOX/AQADAAQAAAAKAOb/AQADAAQAAAAKAOf/AQADAAQAAAAKAOj/AQADAAQAAAAKAOn/AQADAAQAAAAKAOr/AQADAAQAAAAKAOv/AQADAAQAAAAKAOz/AQADAAQAAAAKAO3/AQADAAQAAAAKAO7/AQADAAQAAAAKAO//AQADAAQAAAALAOT/AQADAAQAAAALAOX/AQADAAQAAAALAOb/AQADAAQAAAALAOf/AQADAAQAAAALAOj/AQADAAQAAAALAOn/AQADAAQAAAALAOr/AQADAAQAAAALAOv/AQADAAQAAAALAOz/AQADAAQAAAALAO3/AQADAAQAAAALAO7/AQADAAQAAAALAO//AQADAAQAAAAMAOT/AQADAAQAAAAMAOX/AQADAAQAAAAMAOb/AQADAAQAAAAMAOf/AQADAAQAAAAMAOj/AQADAAQAAAAMAOn/AQADAAQAAAAMAOr/AQADAAQAAAAMAOv/AQADAAQAAAAMAOz/AQADAAQAAAAMAO3/AQADAAQAAAAMAO7/AQADAAQAAAAMAO//AQADAAQAAAANAOT/AQADAAQAAAANAOX/AQADAAQAAAANAOb/AQADAAQAAAANAOf/AQADAAQAAAANAOj/AQADAAQAAAANAOn/AQADAAQAAAANAOr/AQADAAQAAAANAOv/AQADAAQAAAANAOz/AQADAAQAAAANAO3/AQADAAQAAAANAO7/AQADAAQAAAANAO//AQADAAQAAAAOAOT/AQADAAQAAAAOAOX/AQADAAQAAAAOAOb/AQADAAQAAAAOAOf/AQADAAQAAAAOAOj/AQADAAQAAAAOAOn/AQADAAQAAAAOAOr/AQADAAQAAAAOAOv/AQADAAQAAAAOAOz/AQADAAQAAAAOAO3/AQADAAQAAAAOAO7/AQADAAQAAAAOAO//AQADAAQAAAAPAOT/AQADAAQAAAAPAOX/AQADAAQAAAAPAOb/AQADAAQAAAAPAOf/AQADAAQAAAAPAOj/AQADAAQAAAAPAOn/AQADAAQAAAAPAOr/AQADAAQAAAAPAOv/AQADAAQAAAAPAOz/AQADAAQAAAAPAO3/AQADAAQAAAAPAO7/AQADAAQAAAAPAO//AQADAAQAAAAQAOT/AQADAAQAAAAQAOX/AQADAAQAAAAQAOb/AQADAAQAAAAQAOf/AQADAAQAAAAQAOj/AQADAAQAAAAQAOn/AQADAAQAAAAQAOr/AQADAAQAAAAQAOv/AQADAAQAAAAQAOz/AQADAAQAAAAQAO3/AQADAAQAAAAQAO7/AQADAAQAAAAQAO//AQADAAQAAAARAOT/AQADAAQAAAARAOX/AQADAAQAAAARAOb/AQADAAQAAAARAOf/AQADAAQAAAARAOj/AQADAAQAAAARAOn/AQADAAQAAAARAOr/AQADAAQAAAARAOv/AQADAAQAAAARAOz/AQADAAQAAAARAO3/AQADAAQAAAARAO7/AQADAAQAAAARAO//AQADAAQAAAASAOT/AQADAAQAAAASAOX/AQADAAQAAAASAOb/AQADAAQAAAASAOf/AQADAAQAAAASAOj/AQADAAQAAAASAOn/AQADAAQAAAASAOr/AQADAAQAAAASAOv/AQADAAQAAAASAOz/AQADAAQAAAASAO3/AQADAAQAAAASAO7/AQADAAQAAAASAO//AQADAAQAAAAJAP//AQADAAQAAAAKAP//AQADAAQAAAAJAAAAAQADAAQAAAAKAAAAAQADAAQAAAATAAYAAQADAAQAAAATAAcAAQADAAQAAAAUAAYAAQADAAQAAAAUAAcAAQADAAQAAAAJAPD/AQADAAQAAAAJAPH/AQADAAQAAAAKAPD/AQADAAQAAAAKAPH/AQADAAQAAAAAAOL/AQAIAAAAAAAAAOP/AQACAAoAAAABAOL/AQAIAAAAAAABAOP/AQACAAoAAAACAOL/AQAIAAAAAAACAOP/AQACAAoAAAADAOL/AQAIAAAAAAADAOP/AQACAAoAAAAEAOL/AQAIAAAAAAAEAOP/AQACAAoAAAAFAOL/AQAIAAAAAAAFAOP/AQACAAoAAAAGAOL/AQAIAAAAAAAGAOP/AQACAAoAAAAHAOL/AQAIAAAAAAAHAOP/AQACAAoAAAAIAOL/AQAIAAAAAAAIAOP/AQACAAoAAAALAOL/AQAIAAAAAAALAOP/AQACAAoAAAAMAOL/AQAIAAAAAAAMAOP/AQACAAoAAAANAOL/AQAIAAAAAAANAOP/AQACAAoAAAAOAOL/AQAIAAAAAAAOAOP/AQACAAoAAAAPAOL/AQAIAAAAAAAPAOP/AQACAAoAAAAQAOL/AQAIAAAAAAAQAOP/AQACAAoAAAARAOL/AQAIAAAAAAARAOP/AQACAAoAAAASAOL/AQAIAAAAAAASAOP/AQACAAoAAAATAOL/AQAIAAAAAAATAOP/AQACAAoAAAAJAOL/AQACAAoAAAAKAOL/AQACAAoAAAA=")
tile_set = ExtResource("7_uj8uw")
script = ExtResource("8_k21r5")

[node name="Door" parent="." node_paths=PackedStringArray("doorButtons") instance=ExtResource("9_o2cd7")]
position = Vector2(160, -464)
doorButtons = [NodePath("DoorButtonLeft"), NodePath("DoorButtonRight")]

[node name="DoorButtonLeft" parent="Door" instance=ExtResource("7_av2vf")]
position = Vector2(-24, 32)

[node name="DoorButtonRight" parent="Door" instance=ExtResource("7_av2vf")]
position = Vector2(24, 32)

[node name="AnimatedSprite2D" parent="Door/DoorButtonRight" index="0"]
flip_h = true

[node name="CollisionShape2D" parent="Door/DoorButtonRight" index="1"]
position = Vector2(16, 7.5)

[node name="Player" parent="." instance=ExtResource("2_7wc3a")]
position = Vector2(224, 128)

[node name="Health_Component" parent="Player" index="0" node_paths=PackedStringArray("healthUI")]
healthUI = NodePath("../../CanvasLayer/PlayerHealthUI")

[node name="Princess" parent="." instance=ExtResource("16_77ujo")]
position = Vector2(152, 128)

[node name="PrincessDialogue" parent="Princess" index="1" node_paths=PackedStringArray("markers")]
markers = [NodePath("../../enter_ghost_room"), NodePath("../../exit_ghost_room"), NodePath("../../enter_door_room"), NodePath("../../stand_door_button")]

[node name="Sprite2D" parent="Princess" index="2"]
frame = 2

[node name="enter_ghost_room" type="Marker2D" parent="."]
position = Vector2(152, -64)

[node name="exit_ghost_room" type="Marker2D" parent="."]
position = Vector2(152, 120)

[node name="enter_door_room" type="Marker2D" parent="."]
position = Vector2(120, -352)

[node name="stand_door_button" type="Marker2D" parent="."]
position = Vector2(120, -424)

[node name="NavigationRegion2D" parent="." instance=ExtResource("24_tkvb4")]

[connection signal="zone_triggered" from="Door/DialogueZone" to="." method="_on_dialogue_zone_zone_triggered"]
[connection signal="player_died" from="Player/Health_Component" to="." method="_on_health_component_player_died"]

[editable path="Door"]
[editable path="Door/DoorButtonRight"]
[editable path="Player"]
[editable path="Player/Hurtbox"]
[editable path="Player/HitboxPivot/SwordHitbox"]
[editable path="Princess"]
[editable path="Princess/Hurtbox"]
